--- a/sassy-base-step5-layout/index.html
+++ b/sassy-base-step5-layout/index.html
@@ -31,93 +31,191 @@
 
     </header>
 
-    <div class="container">
+    <main>
+        <section class="hero text-centered">
+            <div class="container">
+                <h2 class="headline">My Sassy Base</h2>
+                <h3 class="subheadline">A Simple Sassy CSS Framework</h3>
 
-        <h1>This is a Heading 1</h1>
-        <h2>This is a Heading 2</h2>
-        <h3>This is a Heading 3</h3>
-        <h4>This is a Heading 4</h4>
-        <h5>This is a Heading 5</h5>
-        <h6>This is a Heading 6</h6>
+                <p>For a fast, flexible, front-end start that can be fully customized for bespoke&nbsp;UI&nbsp;designs.</p>
 
-        <p>This is a paragraph. This is <em>italic</em>. This is <strong>bold</strong>. This is a <a href="#">link</a>.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, a amet. Velit, quos impedit illo doloremque
-            quasi
-            tempore
-            quidem mollitia, aliquid voluptas dolorum error placeat culpa numquam quae, nemo itaque. Dolore ullam
-            corporis
-            a
-            animi neque nobis cum, temporibus consectetur similique asperiores nulla soluta perspiciatis, qui autem
-            enim
-            ratione
-            suscipit.
-        </p>
+                <a class="button" href="https://github.com/johndoenma/sassy-base">Check it out on Github</a>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <h2 class="sectionhead">Typographic Scale</h2>
+                <h1>This is a Heading 1</h1>
+                <h2>This is a Heading 2</h2>
+                <h3>This is a Heading 3</h3>
+                <h4>This is a Heading 4</h4>
+                <h5>This is a Heading 5</h5>
+                <h6>This is a Heading 6</h6>
 
-        <p>Consequuntur amet tenetur quibusdam id aperiam quae quos odit, doloribus totam cumque delectus fuga animi
-            nostrum
-            saepe ipsum inventore ipsam eaque molestias voluptas quam dolores ut corrupti in suscipit. Optio quas
-            officia
-            recusandae
-            amet aut. Id ratione ipsam nihil voluptatem.</p>
+                <p>This is a paragraph. This is <em>italic</em>. This is <strong>bold</strong>. This is a <a href="#">link</a>.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, a amet. Velit, quos impedit illo
+                    doloremque
+                    quasi
+                    tempore
+                    quidem mollitia, aliquid voluptas dolorum error placeat culpa numquam quae, nemo itaque. Dolore
+                    ullam
+                    corporis
+                    a
+                    animi neque nobis cum, temporibus consectetur similique asperiores nulla soluta perspiciatis, qui
+                    autem
+                    enim
+                    ratione
+                    suscipit.
+                </p>
 
-        <hr />
+                <p>Consequuntur amet tenetur quibusdam id aperiam quae quos odit, doloribus totam cumque delectus fuga
+                    animi
+                    nostrum
+                    saepe ipsum inventore ipsam eaque molestias voluptas quam dolores ut corrupti in suscipit. Optio
+                    quas
+                    officia
+                    recusandae
+                    amet aut. Id ratione ipsam nihil voluptatem.</p>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <h2 class="sectionhead">Type Specimen</h2>
+                <h2 class="headline">Headline</h2>
+                <h3 class="subheadline">This is a Subheader</h3>
 
-        <h2 class="headline">Headline</h2>
-        <h3 class="subheadline">This is a Subheader</h3>
+                <p class="meta">Meta Info</p>
 
-        <p class="meta">Meta Info</p>
+                <p>This is a paragraph. This is <em>italic</em>. This is <strong>bold</strong>. This is a <a href="#">link</a>.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, a amet. Velit, quos impedit illo
+                    doloremque
+                    quasi
+                    tempore
+                    quidem mollitia, aliquid voluptas dolorum error placeat culpa numquam quae, nemo itaque. Dolore
+                    ullam
+                    corporis
+                    a
+                    animi neque nobis cum, temporibus consectetur similique asperiores nulla soluta perspiciatis, qui
+                    autem
+                    enim
+                    ratione
+                    suscipit.
+                </p>
 
-        <p>This is a paragraph. This is <em>italic</em>. This is <strong>bold</strong>. This is a <a href="#">link</a>.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, a amet. Velit, quos impedit illo doloremque
-            quasi
-            tempore
-            quidem mollitia, aliquid voluptas dolorum error placeat culpa numquam quae, nemo itaque. Dolore ullam
-            corporis
-            a
-            animi neque nobis cum, temporibus consectetur similique asperiores nulla soluta perspiciatis, qui autem
-            enim
-            ratione
-            suscipit.
-        </p>
+                <a class="button">This is a Button</a>
+                <a class="button alt">This is an Alt Button</a>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+                <h2 class="sectionhead">Reusable Grid System</h2>
+                <div class="demo">
 
-        <a class="button">This is a Button</a>
-        <a class="button alt">This is an Alt Button</a>
+                    <div class="row">
 
-        <hr />
+                        <div class="one column">
+                            <p>1 Column</p>
+                        </div>
+                    </div>
 
-        <div class="demo">
+                    <div class="row">
+                        <div class="one-half column">
+                            <p>&frac12; Column</p>
+                        </div>
+                        <div class="one-half column">
+                            <p>&frac12; Column</p>
+                        </div>
+                    </div>
 
-            <div class="row">
+                    <div class="row">
+                        <div class="one-third column">
+                            <p>&frac13; Column</p>
+                        </div>
+                        <div class="one-third column">
+                            <p>&frac13; Column</p>
+                        </div>
+                        <div class="one-third column">
+                            <p>&frac13; Column</p>
+                        </div>
+                    </div>
 
-                <div class="one column">
-                    <p>1 Column</p>
+                    <div class="row">
+                        <div class="one-half column centered">
+                            <p>&frac12; Column Centered</p>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="two-thirds column centered">
+                            <p>&frac23; Column Centered</p>
+                        </div>
+                    </div>
+
                 </div>
             </div>
-
-            <div class="row">
-                <div class="one-half column">
-                    <p>&frac12; Column</p>
+        </section>
+        <section>
+            <div class="container">
+                <h2 class="sectionhead">Sample Layout</h2>
+                <div class="row">
+                    <div class="one-half column">
+                        <img src="https://picsum.photos/g/1600/?random" alt="placeholder" />
+                    </div>
+                    <div class="one-half column">
+                        <h3>Right Column</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt lacus eget neque
+                            aliquet
+                            cursus. Nulla ac nisl sed nisi posuere dapibus vitae id sem. Donec porttitor congue felis,
+                            tempus
+                            condimentum nunc&nbsp;semper&nbsp;non. </p>
+                    </div>
                 </div>
-                <div class="one-half column">
-                    <p>&frac12; Column</p>
+
+                <div class="row swapped">
+                    <div class="one-half column">
+                        <img src="https://picsum.photos/g/1601/?random" alt="placeholder" />
+                    </div>
+                    <div class="one-half column">
+                        <h3>Left Column</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt lacus eget neque
+                            aliquet
+                            cursus. Nulla ac nisl sed nisi posuere dapibus vitae id sem. Donec porttitor congue felis,
+                            tempus
+                            condimentum nunc&nbsp;semper&nbsp;non. </p>
+                    </div>
+                </div>
+
+
+                <div class="row">
+                    <div class="one-half column centered">
+                        <img src="https://picsum.photos/g/1602/?random" alt="placeholder" />
+                        <h3>Center Column</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris tincidunt lacus eget neque
+                            aliquet
+                            cursus. Nulla ac nisl sed nisi posuere dapibus vitae id sem. Donec porttitor congue felis,
+                            tempus
+                            condimentum nunc&nbsp;semper&nbsp;non. </p>
+                    </div>
                 </div>
             </div>
-
-            <div class="row">
-                <div class="one-third column">
-                    <p>&frac13; Column</p>
-                </div>
-                <div class="one-third column">
-                    <p>&frac13; Column</p>
-                </div>
-                <div class="one-third column">
-                    <p>&frac13; Column</p>
-                </div>
-
+        </section>
+        <section>
+            <div class="container">
             </div>
-        </div>
+        </section>
+    </main>
 
-    </div>
+    <header class="site-footer">
+        <nav class="site-navigation">
+            <ul>
+                <li><a href="#">Lorem</a></li>
+                <li><a href="#">Ipsum</a></li>
+                <li><a href="#">Dolorem</a></li>
+            </ul>
+        </nav>
+
+    </header>
+
     <!-- <script src="js/script.js" /> -->
 </body>
 
