--- a/sitebase-2019/base-site-structure-2019/index.html
+++ b/sitebase-2019/base-site-structure-2019/index.html
@@ -5,6 +5,9 @@
     <title>Site Base | Home</title>
     <meta charset="utf-8" />
 
+    <!-- VIEWPORT FOR MOBILE -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
     <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
