--- a/sassybase-2020/sassybase-2020-step4-responsive/index.html
+++ b/sassybase-2020/sassybase-2020-step4-responsive/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- ADOBE FONTS -->
-  <link rel="stylesheet" href="https://use.typekit.net/amd8oww.css">
+    <link rel="stylesheet" href="https://use.typekit.net/amd8oww.css">
 
     <!-- MAIN CSS -->
     <link href="css/style.css" rel="stylesheet" />
@@ -18,46 +18,46 @@
 
 <body>
 
-<div class="container">
+    <div class="container">
 
-    <h1>This is a Heading 1</h1>
-    <h2>This is a Heading 2</h2>
-    <h3>This is a Heading 3</h3>
+        <h1>This is a Heading 1</h1>
+        <h2>This is a Heading 2</h2>
+        <h3>This is a Heading 3</h3>
 
-    <p>This is a paragraph. This is <em>italic</em>. This is <strong>bold</strong>. This is a <a href="#">link</a>.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, a amet. Velit, quos impedit illo doloremque quasi
-        tempore quidem mollitia, aliquid voluptas dolorum error placeat culpa numquam quae, nemo itaque. Dolore ullam corporis
-        a animi neque nobis cum, temporibus consectetur similique asperiores nulla soluta perspiciatis, qui autem enim
-        ratione suscipit.
-    </p>
+        <p>This is a paragraph. This is <em>italic</em>. This is <strong>bold</strong>. This is a <a href="#">link</a>.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, a amet. Velit, quos impedit illo doloremque quasi
+            tempore quidem mollitia, aliquid voluptas dolorum error placeat culpa numquam quae, nemo itaque. Dolore ullam corporis
+            a animi neque nobis cum, temporibus consectetur similique asperiores nulla soluta perspiciatis, qui autem enim
+            ratione suscipit.
+        </p>
 
-    <p>Consequuntur amet tenetur quibusdam id aperiam quae quos odit, doloribus totam cumque delectus fuga animi
-        nostrum saepe ipsum inventore ipsam eaque molestias voluptas quam dolores ut corrupti in suscipit. Optio quas officia
-        recusandae amet aut. Id ratione ipsam nihil voluptatem.</p>
+        <p>Consequuntur amet tenetur quibusdam id aperiam quae quos odit, doloribus totam cumque delectus fuga animi
+            nostrum saepe ipsum inventore ipsam eaque molestias voluptas quam dolores ut corrupti in suscipit. Optio quas officia
+            recusandae amet aut. Id ratione ipsam nihil voluptatem.</p>
 
-    <hr />
+        <hr />
 
-    <h2 class="headline">Headline</h2>
-    <h3 class="subheadline">This is a Subheader</h3>
+        <h2 class="headline">Headline</h2>
+        <h3 class="subheadline">This is a Subheader</h3>
 
-    <p>This is a paragraph. This is <em>italic</em>. This is <strong>bold</strong>. This is a <a href="#">link</a>.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, a amet. Velit, quos impedit illo doloremque quasi
-        tempore
-        quidem mollitia, aliquid voluptas dolorum error placeat culpa numquam quae, nemo itaque. Dolore ullam corporis
-        a
-        animi neque nobis cum, temporibus consectetur similique asperiores nulla soluta perspiciatis, qui autem enim
-        ratione
-        suscipit.
-    </p>
-    <button>This is a Button</button>
-    <a class="button">This is a Link Button</a>
-    <a class="button alt">This is an Alt Link Button</a>
+        <p>This is a paragraph. This is <em>italic</em>. This is <strong>bold</strong>. This is a <a href="#">link</a>.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id, a amet. Velit, quos impedit illo doloremque quasi
+            tempore
+            quidem mollitia, aliquid voluptas dolorum error placeat culpa numquam quae, nemo itaque. Dolore ullam corporis
+            a
+            animi neque nobis cum, temporibus consectetur similique asperiores nulla soluta perspiciatis, qui autem enim
+            ratione
+            suscipit.
+        </p>
+        <button>This is a Button</button>
+        <a class="button">This is a Link Button</a>
+        <a class="button alt">This is an Alt Link Button</a>
 
-    <hr />
+        <hr />
 
-    <img src="http://via.placeholder.com/1500x750/dddddd/bbbbbb?text=PLACEHOLDER+IMAGE" alt="Placeholder Image" />
+        <img src="http://via.placeholder.com/1500x750/dddddd/bbbbbb?text=PLACEHOLDER+IMAGE" alt="Placeholder Image" width="1500" height="750" />
 
-</div>
+    </div>
 
 
     <!-- <script src="js/script.js" /> -->
